[gd_scene load_steps=7 format=3 uid="uid://delfmam06l58y"]

[ext_resource type="Script" path="res://Enemys/StaticEnemy.gd" id="1"]
[ext_resource type="Script" path="res://Enemys/AI.gd" id="3"]
[ext_resource type="PackedScene" path="res://Util/DistanceLOD.tscn" id="4"]

[sub_resource type="CylinderShape3D" id="1"]
radius = 120.0

[sub_resource type="SeparationRayShape3D" id="2"]
length = 203.831

[sub_resource type="SphereShape3D" id="3"]
radius = 0.470415

[node name="StaticEnemy" type="Node3D" groups=["persist"]]
script = ExtResource("1")

[node name="Attention" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0783547, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="Attention"]
shape = SubResource("1")

[node name="AI" type="Node" parent="."]
script = ExtResource("3")

[node name="DistanceLOD" parent="." instance=ExtResource("4")]

[node name="Marker" type="Area3D" parent="."]
monitoring = false
monitorable = false

[node name="AimLine" type="CollisionShape3D" parent="Marker"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.16111, 0)
shape = SubResource("2")

[node name="PredictionMarker" type="CollisionShape3D" parent="Marker"]
shape = SubResource("3")

[node name="MissionEndedTimer" type="Timer" parent="."]
wait_time = 200.0
one_shot = true

[connection signal="body_entered" from="Attention" to="AI" method="_on_Attention_body_entered"]
[connection signal="body_exited" from="Attention" to="AI" method="_on_Attention_body_exited"]
[connection signal="timeout" from="MissionEndedTimer" to="." method="_on_MissionEndedTimer_timeout"]
